force-app/main/default/objects/Trigger_Setting__mdt/Trigger_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Shared configuration across trigger handlers.</description>
    <label>Trigger Setting</label>
    <pluralLabel>Trigger Settings</pluralLabel>
</CustomObject>