force-app/main/default/objects/Trigger_Setting__mdt/fields/Allow_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Allow_Bypass__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should the triggers utilize the trigger bypass logic.  If this is unchecked, the bypass logic will be ignored regardless of additional configuration.</description>
    <inlineHelpText>Should the triggers utilize the trigger bypass logic?</inlineHelpText>
    <label>Allow Bypass</label>
    <type>Checkbox</type>
</CustomField>