force-app/main/default/objects/Trigger_Setting__mdt/fields/Maximum_Loop_Count__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Loop_Count__c</fullName>
    <defaultValue>5</defaultValue>
    <description>The maximum number of times that the trigger log can be executed in the same transaction.  If set to 0, the trigger will execute without limit.</description>
    <inlineHelpText>How many times can the trigger logic be executed?</inlineHelpText>
    <label>Maximum Loop Count</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>