force-app/main/default/objects/Trigger_Setting__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>The fully qualified name for the SObject that the triggers are executing against.</description>
    <inlineHelpText>The fully qualified name for the SObject that the triggers are executing against.</inlineHelpText>
    <label>SObject</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>